Update styles + updates methods + key json

--- a/src/app/components/add-expense/add-expense.component.html
+++ b/src/app/components/add-expense/add-expense.component.html
@@ -4,9 +4,9 @@
       <input type="text" [(ngModel)]="title" name="title" placeholder="Titre" required />
       <select [(ngModel)]="category" name="category" required>
         <option value="" disabled selected>Catégorie</option>
-        <option value="Food">Alimentation</option>
+        <option value="Alimentation">Alimentation</option>
         <option value="Transport">Transport</option>
-        <option value="Entertainment">Divertissement</option>
+        <option value="Divertissement">Divertissement</option>
       </select>
       <input type="number" [(ngModel)]="amount" name="amount" placeholder="Montant" required />
       <button type="submit">Ajouter</button>
